--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: space-between;
   font-weight: 600;
-
+  z-index: 100;
 
   background-color: var(--surface);
   border-bottom: 1px solid var(--border-color);
