--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   z-index: 1;
-  background-color: var(--surface);
+  background-color: #1B1135;
   border-right: 1px solid var(--border-color);
 
   padding: 0.5rem;
@@ -75,15 +75,15 @@
   border: none;
   padding: 1.5rem 1.5rem 1.2rem 1.5rem;
   border-radius: 2rem;
-  background-color: var(--primary-color);
+  background-color: #D4C2FF;
   font-weight: 700;
   font-size: 1.1rem;
-  color: var(--white);
+  color: #361696;
   align-self: center;
   cursor: pointer;
 }
 .create-new-post-btn:hover {
-  background-color: var(--primary-color-hover);
+  background-color: #C6ADFF;
 }
 
 @media (min-width: 768px) {
@@ -120,10 +120,10 @@
     border: none;
     padding: 1.5rem 1.5rem 1.2rem 1.5rem;
     border-radius: 2rem;
-    background-color: var(--primary-color);
+    background-color: #D4C2FF;
     font-weight: 700;
     font-size: 1.1rem;
-    color: var(--white);
+    color: #361696;
     margin-top: 1rem;
     align-self: center;
     cursor: pointer;
@@ -178,10 +178,10 @@
     border: none;
     padding: 0.9rem;
     border-radius: 2rem;
-    background-color: var(--primary-color);
+    background-color: #D4C2FF;
     font-weight: 700;
     font-size: 1.1rem;
-    color: var(--white);
+    color: #361696;
     margin-top: 1rem;
     display: flex;
     align-items: center;
