--- a/src/components/SocialMediaApp/SocialMediaApp.css
+++ b/src/components/SocialMediaApp/SocialMediaApp.css
@@ -14,6 +14,16 @@
   animation: windowOpen 0.2s ease-out;
 }
 
+.social-app-embedded {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
 @keyframes windowOpen {
   from {
     opacity: 0;
